split out the event store support classes and UT's on the semantic model part of that

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -58,7 +58,10 @@
     <Compile Include="document_session_persist_and_load_single_documents_Tests.cs" />
     <Compile Include="duplicate_fields_in_table_and_upsert_Tests.cs" />
     <Compile Include="Events\end_to_end_event_capture_and_fetching_the_stream_Tests.cs" />
+    <Compile Include="Events\EventGraphTests.cs" />
+    <Compile Include="Events\EventMappingTests.cs" />
     <Compile Include="Events\QuestTypes.cs" />
+    <Compile Include="Events\StreamMappingTests.cs" />
     <Compile Include="Events\using_the_schema_objects_Tests.cs" />
     <Compile Include="Fixtures\LinqFixture.cs" />
     <Compile Include="Fixtures\OrderingFixture.cs" />
