--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -45,7 +45,14 @@
     </Compile>
     <Compile Include="CommandRunner.cs" />
     <Compile Include="DocumentSession.cs" />
-    <Compile Include="Events\EventClasses.cs" />
+    <Compile Include="Events\Events.cs" />
+    <Compile Include="Events\EventGraph.cs" />
+    <Compile Include="Events\EventMapping.cs" />
+    <Compile Include="Events\IAggregate.cs" />
+    <Compile Include="Events\IEvent.cs" />
+    <Compile Include="Events\IEvents.cs" />
+    <Compile Include="Events\ProjectionTiming.cs" />
+    <Compile Include="Events\StreamMapping.cs" />
     <Compile Include="Generation\TableColumn.cs" />
     <Compile Include="Generation\TableDefinition.cs" />
     <Compile Include="ICommandRunner.cs" />
