--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -45,14 +45,18 @@
     </Compile>
     <Compile Include="CommandRunner.cs" />
     <Compile Include="DocumentSession.cs" />
-    <Compile Include="EntityKey.cs" />
+    <Compile Include="Map\DocumentIdentity.cs" />
     <Compile Include="Generation\TableColumn.cs" />
     <Compile Include="Generation\TableDefinition.cs" />
     <Compile Include="ICommandRunner.cs" />
     <Compile Include="IConnectionFactory.cs" />
-    <Compile Include="IdentityMap.cs" />
+    <Compile Include="Map\DocumentMap.cs" />
+    <Compile Include="Map\DocumentMapEntry.cs" />
+    <Compile Include="Map\DocumentUpdate.cs" />
+    <Compile Include="Map\IDocumentMap.cs" />
     <Compile Include="IDocumentSession.cs" />
     <Compile Include="IDocumentStore.cs" />
+    <Compile Include="Map\IDocumentMapEntry.cs" />
     <Compile Include="ISerializer.cs" />
     <Compile Include="JsonNetSerializer.cs" />
     <Compile Include="Linq\CompoundWhereFragment.cs" />
