--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Schema\DuplicatedFieldRole.cs" />
     <Compile Include="Schema\Field.cs" />
     <Compile Include="Schema\GuidIdGeneration.cs" />
+    <Compile Include="Schema\IdRetriever.cs" />
     <Compile Include="Schema\IIdGeneration.cs" />
     <Compile Include="Schema\PostgresUpsertType.cs" />
     <Compile Include="Schema\StringIdGeneration.cs" />
