--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Linq\invoking_queryable_through_single_Tests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Linq\invoking_query_with_select_Tests.cs" />
     <Compile Include="Linq\MartenExpressionParserTests.cs" />
     <Compile Include="Linq\query_against_dateoffset_Tests.cs" />
     <Compile Include="Linq\query_with_enums_Tests.cs" />
