--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -47,6 +47,9 @@
     <Compile Include="IMartenQueryExecutor.cs" />
     <Compile Include="ISession.cs" />
     <Compile Include="ITrackingSession.cs" />
+    <Compile Include="Map\DocumentChange.cs" />
+    <Compile Include="Map\DocumentDelete.cs" />
+    <Compile Include="Map\DocumentDeleteById.cs" />
     <Compile Include="Map\DocumentIdentity.cs" />
     <Compile Include="Events\Events.cs" />
     <Compile Include="Events\EventGraph.cs" />
@@ -60,7 +63,8 @@
     <Compile Include="Generation\TableDefinition.cs" />
     <Compile Include="ICommandRunner.cs" />
     <Compile Include="IConnectionFactory.cs" />
-    <Compile Include="Map\DocumentMap.cs" />
+    <Compile Include="Map\NonTrackedDocumentMap.cs" />
+    <Compile Include="Map\TrackedDocumentMap.cs" />
     <Compile Include="Map\DocumentMapEntry.cs" />
     <Compile Include="Map\DocumentUpdate.cs" />
     <Compile Include="Map\IDocumentMap.cs" />
@@ -116,6 +120,7 @@
     <Compile Include="Schema\StorageArgument.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="SerializerExtensions.cs" />
+    <Compile Include="BaseSession.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="TrackingSession.cs" />
     <Compile Include="TypeMappings.cs" />
