spiking around event metadata, set up mocha for JS work

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -136,6 +136,8 @@
   -->
   <ItemGroup>
     <Content Include="connection.txt" />
+    <Content Include="Events\location.js" />
+    <Content Include="Events\party.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
