--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -134,6 +134,14 @@
     <Folder Include="Schema\Javascript\" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Schema\SQL\mt_initialize_projections.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\javascript\mt_transforms.js">
+      <Link>Schema\SQL\mt_transforms.js</Link>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="FubuCore">
       <HintPath>..\..\packages\FubuCore\lib\FubuCore.dll</HintPath>
       <Private>True</Private>
