--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Events\EventMappingTests.cs" />
     <Compile Include="Events\event_administration_Tests.cs" />
     <Compile Include="Events\FakeAggregate.cs" />
+    <Compile Include="Events\plv8_transformation_functions_Tests.cs" />
     <Compile Include="Events\QuestTypes.cs" />
     <Compile Include="Events\StreamMappingTests.cs" />
     <Compile Include="Events\using_the_schema_objects_Tests.cs" />
