implementation of a dirty tracking identity map

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Documents\User.cs" />
     <Compile Include="document_session_delete_a_single_document_Tests.cs" />
     <Compile Include="Map\NonTrackedDocumentMapMapTests.cs" />
+    <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
     <Compile Include="Session\document_session_load_not_yet_persisted_document_Tests.cs" />
     <Compile Include="TrackingSession\DocumentSessionFixture.cs" />
