Support Last() and LastOrDefault() queries (closes #41)
Basically ensure first tests pass when switched to last but am setting flag property and checking for this to ensure it really does return last one

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Documents\Issue.cs" />
     <Compile Include="Documents\User.cs" />
     <Compile Include="document_session_delete_a_single_document_Tests.cs" />
+    <Compile Include="Linq\invoking_queryable_through_last_Tests.cs" />
     <Compile Include="Map\NonTrackedDocumentMapMapTests.cs" />
     <Compile Include="Session\document_session_load_not_yet_persisted_document_Tests.cs" />
     <Compile Include="TrackingSession\DocumentSessionFixture.cs" />
