--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Map\NonTrackedDocumentMapMapTests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
+    <Compile Include="Services\NulloIdentityMapTests.cs" />
+    <Compile Include="Services\TrackedEntityTests.cs" />
     <Compile Include="Session\document_session_load_not_yet_persisted_document_Tests.cs" />
     <Compile Include="TrackingSession\DocumentSessionFixture.cs" />
     <Compile Include="TrackingSession\document_session_load_already_loaded_document_Tests.cs" />
