moved diagnostics and bulk insert from IDocumentSession to IDocumentStore

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -43,6 +43,8 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AdvancedOptions.cs" />
+    <Compile Include="DocumentStore.cs" />
     <Compile Include="Services\CommandRunner.cs" />
     <Compile Include="Services\Diagnostics.cs" />
     <Compile Include="Events\EventStore.cs" />
