separated out the implementation of query methods to QuerySession

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -45,6 +45,7 @@
     </Compile>
     <Compile Include="AdvancedOptions.cs" />
     <Compile Include="DocumentStore.cs" />
+    <Compile Include="QuerySession.cs" />
     <Compile Include="Services\CommandRunner.cs" />
     <Compile Include="Services\Diagnostics.cs" />
     <Compile Include="Events\EventStore.cs" />
