--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -55,6 +55,11 @@
     <Compile Include="Documents\Issue.cs" />
     <Compile Include="Documents\User.cs" />
     <Compile Include="document_session_delete_a_single_document_Tests.cs" />
+    <Compile Include="document_session_persist_and_load_single_documents_Tests.cs" />
+    <Compile Include="duplicate_fields_in_table_and_upsert_Tests.cs" />
+    <Compile Include="Events\end_to_end_event_capture_and_fetching_the_stream_Tests.cs" />
+    <Compile Include="Events\EventGraphTests.cs" />
+    <Compile Include="Events\EventMappingTests.cs" />
     <Compile Include="Events\event_administration_Tests.cs" />
     <Compile Include="Events\FakeAggregate.cs" />
     <Compile Include="Events\plv8_transformation_functions_Tests.cs" />
@@ -80,6 +85,7 @@
     <Compile Include="Linq\invoking_queryable_through_first_Tests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Linq\invoking_queryable_through_last_Tests.cs" />
     <Compile Include="Linq\invoking_queryable_through_single_Tests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -93,6 +99,14 @@
     <Compile Include="performance_report.cs" />
     <Compile Include="performance_tuning.cs" />
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
+    <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
+    <Compile Include="Services\IdentityMapTests.cs" />
+    <Compile Include="Services\NulloIdentityMapTests.cs" />
+    <Compile Include="Services\TrackedEntityTests.cs" />
+    <Compile Include="Session\document_session_load_already_loaded_document_Tests.cs" />
+    <Compile Include="Session\document_session_load_not_yet_persisted_document_Tests.cs" />
+    <Compile Include="Session\document_session_update_existing_document_without_dirty_checking_Tests.cs" />
+    <Compile Include="TrackingSession\document_session_load_already_loaded_document_Tests.cs" />
     <Compile Include="TrackingSession\document_session_load_not_yet_persisted_document_Tests.cs" />
     <Compile Include="persist_and_deleting_multiple_documents_Tests.cs" />
     <Compile Include="persist_and_load_documents_with_int_ids_Tests.cs" />
@@ -116,6 +130,7 @@
     <Compile Include="Schema\Sequences\SequenceFactoryTests.cs" />
     <Compile Include="show_document_storage_code_in_diagnostics_Tests.cs" />
     <Compile Include="SpecificationExtensions.cs" />
+    <Compile Include="TrackingSession\document_session_update_existing_document_Tests.cs" />
     <Compile Include="TypeMappingsTests.cs" />
     <Compile Include="UnitOfWorkTests.cs" />
     <Compile Include="Util\CommandExtensionsTests.cs" />
