--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -99,6 +99,7 @@
     <Compile Include="performance_report.cs" />
     <Compile Include="performance_tuning.cs" />
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
+    <Compile Include="Schema\IndexDefinitionTests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
     <Compile Include="Services\NulloIdentityMapTests.cs" />
