basic containment operator functionality in where clauses

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -45,6 +45,7 @@
     </Compile>
     <Compile Include="AdvancedOptions.cs" />
     <Compile Include="DocumentStore.cs" />
+    <Compile Include="Linq\ContainmentWhereFragment.cs" />
     <Compile Include="QuerySession.cs" />
     <Compile Include="Schema\IndexDefinition.cs" />
     <Compile Include="Services\CommandRunner.cs" />
