--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Github\GhUser.cs" />
     <Compile Include="Github\GitHubExporter.cs" />
     <Compile Include="Github\RepositoryHistory.cs" />
+    <Compile Include="insert_timing.cs" />
     <Compile Include="Linq\deep_searches_Tests.cs" />
     <Compile Include="Linq\invoking_queryable_any_Tests.cs">
       <SubType>Code</SubType>
