--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Linq\invoking_query_with_select_Tests.cs" />
     <Compile Include="Linq\MartenExpressionParserTests.cs" />
     <Compile Include="Linq\query_against_dateoffset_Tests.cs" />
+    <Compile Include="Linq\query_against_primitive_array_Tests.cs" />
     <Compile Include="Linq\query_with_enums_Tests.cs" />
     <Compile Include="Linq\query_with_nullable_types_Tests.cs" />
     <Compile Include="Linq\using_containment_operator_in_linq_Tests.cs" />
