--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Schema\StorageArgument.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="Services\NulloIdentityMap.cs" />
+    <Compile Include="Services\RequestCounter.cs" />
     <Compile Include="Services\TrackedEntity.cs" />
     <Compile Include="StoreOptions.cs" />
     <Compile Include="Util\SerializerExtensions.cs" />
