--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Events\StreamMappingTests.cs" />
     <Compile Include="Events\using_the_schema_objects_Tests.cs" />
     <Compile Include="Examples\IdExamples.cs" />
+    <Compile Include="Examples\LinqExamples.cs" />
     <Compile Include="Fixtures\LinqFixture.cs" />
     <Compile Include="Fixtures\OrderingFixture.cs" />
     <Compile Include="Fixtures\ResultSet.cs" />
