--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -127,7 +127,9 @@
     <Compile Include="Services\IdentityMapTests.cs" />
     <Compile Include="Services\NulloIdentityMapTests.cs" />
     <Compile Include="Services\TrackedEntityTests.cs" />
+    <Compile Include="Session\document_session_find_json_async_Tests.cs" />
     <Compile Include="Session\document_session_load_already_loaded_document_Tests.cs" />
+    <Compile Include="Session\document_session_find_json_Tests.cs" />
     <Compile Include="Session\document_session_load_not_yet_persisted_document_Tests.cs" />
     <Compile Include="Session\document_session_update_existing_document_without_dirty_checking_Tests.cs" />
     <Compile Include="TrackingSession\document_session_load_already_loaded_document_Tests.cs" />
