--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -123,6 +123,7 @@
     <Compile Include="performance_tuning.cs" />
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
     <Compile Include="Schema\IndexDefinitionTests.cs" />
+    <Compile Include="Schema\when_deriving_the_table_definition_from_the_database_schema_Tests.cs" />
     <Compile Include="searchable_properties_Tests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
