can check table equivalency on columns and pk

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Fixtures\OrderingFixture.cs" />
     <Compile Include="Fixtures\ResultSet.cs" />
     <Compile Include="Fixtures\Target.cs" />
+    <Compile Include="Generation\TableDefinitionTests.cs" />
     <Compile Include="Github\Documents.cs" />
     <Compile Include="Github\GhRepository.cs" />
     <Compile Include="Github\GhUser.cs" />
