--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -125,6 +125,7 @@
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
     <Compile Include="Schema\IndexDefinitionTests.cs" />
     <Compile Include="Schema\when_deriving_the_table_definition_from_the_database_schema_Tests.cs" />
+    <Compile Include="Schema\will_build_a_new_database_table_if_definition_changes_Tests.cs" />
     <Compile Include="searchable_properties_Tests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
