--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Documents\User.cs" />
     <Compile Include="document_session_delete_a_single_document_Tests.cs" />
     <Compile Include="document_session_persist_and_load_single_documents_Tests.cs" />
+    <Compile Include="document_types_must_have_an_id_member_Tests.cs" />
     <Compile Include="duplicate_fields_in_table_and_upsert_Tests.cs" />
     <Compile Include="Events\end_to_end_event_capture_and_fetching_the_stream_Tests.cs" />
     <Compile Include="Events\EventGraphTests.cs" />
