--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Schema\IndexDefinition.cs" />
     <Compile Include="Schema\MartenSchemaException.cs" />
     <Compile Include="Services\CommandRunner.cs" />
+    <Compile Include="Services\CommandRunnerExtensions.cs" />
     <Compile Include="Services\Diagnostics.cs" />
     <Compile Include="Events\EventStore.cs" />
     <Compile Include="Linq\IMartenQueryExecutor.cs" />
