--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Schema\HiLoSequenceAttribute.cs" />
     <Compile Include="Schema\IndexDefinition.cs" />
     <Compile Include="Schema\MartenSchemaException.cs" />
+    <Compile Include="Services\BatchCommand.cs" />
     <Compile Include="Services\CommandRunner.cs" />
     <Compile Include="Services\CommandRunnerExtensions.cs" />
     <Compile Include="Services\Diagnostics.cs" />
