--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -124,6 +124,7 @@
     <Compile Include="performance_report.cs" />
     <Compile Include="performance_tuning.cs" />
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
+    <Compile Include="Schema\configuring_searchable_fields_Tests.cs" />
     <Compile Include="Schema\IndexDefinitionTests.cs" />
     <Compile Include="Schema\Sequences\configuring_hilo_overrides_Tests.cs" />
     <Compile Include="Schema\when_deriving_the_table_definition_from_the_database_schema_Tests.cs" />
