--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Schema\IndexDefinition.cs" />
     <Compile Include="Schema\MartenSchemaException.cs" />
     <Compile Include="Services\BatchCommand.cs" />
+    <Compile Include="Services\Batching.cs" />
     <Compile Include="Services\CommandRunner.cs" />
     <Compile Include="Services\CommandRunnerExtensions.cs" />
     <Compile Include="Services\Diagnostics.cs" />
