--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Schema\Sequences\configuring_hilo_overrides_Tests.cs" />
     <Compile Include="Schema\when_deriving_the_table_definition_from_the_database_schema_Tests.cs" />
     <Compile Include="Schema\will_build_a_new_database_table_if_definition_changes_Tests.cs" />
+    <Compile Include="Schema\will_name_nested_class_documents_appropriately.cs" />
     <Compile Include="searchable_properties_Tests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
