--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Linq\IMartenQueryProvider.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
     <Compile Include="QuerySession.cs" />
+    <Compile Include="Schema\DocumentAliasAttribute.cs" />
+    <Compile Include="Schema\GinIndexedAttribute.cs" />
     <Compile Include="Schema\HiLoSequenceAttribute.cs" />
     <Compile Include="Schema\IndexDefinition.cs" />
     <Compile Include="Schema\InvalidDocumentException.cs" />
