--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Schema\HiLoSequenceAttribute.cs" />
     <Compile Include="Schema\IndexDefinition.cs" />
     <Compile Include="Schema\InvalidDocumentException.cs" />
+    <Compile Include="Schema\IResolver.cs" />
     <Compile Include="Schema\MartenSchemaException.cs" />
     <Compile Include="Services\BatchCommand.cs" />
     <Compile Include="Services\CommandRunner.cs" />
