--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Schema\DocumentAliasAttribute.cs" />
     <Compile Include="Schema\GinIndexedAttribute.cs" />
     <Compile Include="Schema\HiLoSequenceAttribute.cs" />
+    <Compile Include="Schema\IDocumentMapping.cs" />
     <Compile Include="Schema\IndexDefinition.cs" />
     <Compile Include="Schema\InvalidDocumentException.cs" />
     <Compile Include="Schema\IResolver.cs" />
