added the HierarchyArgument and using from within hierarchy mapping

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Schema\ColumnValue.cs" />
     <Compile Include="Schema\DocumentAliasAttribute.cs" />
     <Compile Include="Schema\GinIndexedAttribute.cs" />
+    <Compile Include="Schema\Hierarchies\HierarchyArgument.cs" />
     <Compile Include="Schema\Hierarchies\HierarchyClasses.cs" />
     <Compile Include="Schema\HiLoSequenceAttribute.cs" />
     <Compile Include="Schema\IDocumentMapping.cs" />
